// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation snapshot, user is authenticated 1`] = `
<nav
  className="navbar"
>
  <div
    className="logo"
    onClick={[Function]}
    style={
      Object {
        "fontSize": "1.75em",
      }
    }
  >
    L
  </div>
  <span
    className="user-nav-widget"
  >
    <span>
      username
    </span>
    <img
      alt="username"
      className="img-circle"
      src="pic"
      width={40}
    />
    <span
      onClick={[Function]}
    >
      <i
        className="fa fa-sign-out"
      />
    </span>
  </span>
</nav>
`;

exports[`Navigation snapshot, user not authenticated 1`] = `
<nav
  className="navbar"
>
  <div
    className="logo"
    onClick={[Function]}
    style={
      Object {
        "fontSize": "1.75em",
      }
    }
  >
    L
  </div>
  <button
    onClick={[Function]}
    type="button"
  >
    Log in or sign up
  </button>
</nav>
`;
